* set styles `content-visibility` and `contain-intrinsic-height` on `.reply` & `.posts-nav-thread` to achieve native virtual scroll: https://web.dev/articles/content-visibility @ `<NavSidebar>` & `<ViewList>` * fix reflow often occurs after the first attempt to scroll the element matches with the current route hash into view that makes the element out of view again by listening to new event `@scrollend`: https://developer.chrome.com/blog/scrollend-a-new-javascript-event to repeatly scroll until it sticks with the top of viewport @ `<Post>.parseRouteThenFetch()`
* fix regression made in 7685ecbb6f227a91ca2733e5366473733763f037 that `document.scrollingElement` might get scrolled down to show the current `.posts-nav-thread` leads to impossible take viewport back to the top @ `watchEffect()`
* now will apply `.btn-outline-warning` on `.posts-nav-reply` that matches with current route hash
* disable `margin-left: -1px` overlapping that hides the previous `border-right` brought by `.btn` and narrow the `padding-inline` for every `.posts-nav-reply`
@ `<NavSidebar>`

* widen the return type of exported `postListItemScrollPosition()` to simulate with internal type `ScrollPositionElement` from `vue-router.d.ts`
* remove `.col` from `.thread-title` to remain its fixed height, partial revert 17a414ee1a35c336cf13d2b8eb0d79a570780047
@ `<ViewList>
- `.tieba-image` is dynamic height again with respects to `<img>` aspect ratio, partial revert 58e2c91b605de7387f797b76735feb29cc5ecee6 @ styles/tiebaPostElements.css
@ fe

--- a/fe/src/styles/tiebaPostElements.css
+++ b/fe/src/styles/tiebaPostElements.css
@@ -10,8 +10,8 @@
 }
 
 .tieba-image {
-    width: 12.5rem;
-    height: 12.5rem;
+    max-width: 18.75rem;
+    max-height: 18.75rem;
     object-fit: contain;
     margin: .25rem;
     cursor: zoom-in;
